<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clHeaderBack"
        android:gravity="center"
        android:text="@string/thong_tin_ca_nhan"
        android:textColor="@color/clHeaderText"
        android:textSize="16pt"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/ho_ten"
            android:textColor="@color/clText"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtHoTen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:textSize="10pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/cmnd"
            android:textColor="@color/clText"
            android:textSize="10pt" />

        <EditText
            android:id="@+id/txtCMND"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="10pt" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clGroupBack"
        android:gravity="center"
        android:text="@string/gioi_tinh"
        android:textColor="@color/clGroupText"
        android:textSize="14pt"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbNam"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nam" />

        <RadioButton
            android:id="@+id/rdbNu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nu" />

        <RadioButton
            android:id="@+id/rdbKhongXD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/khong_xd" />

    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clGroupBack"
        android:gravity="center"
        android:text="@string/so_thich"
        android:textColor="@color/clGroupText"
        android:textSize="14pt"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ckbAnNgon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/an_ngon" />

        <CheckBox
            android:id="@+id/ckbMacDep"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mac_dep" />

        <CheckBox
            android:id="@+id/ckbChoiGame"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/choi_game" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clGroupBack"
        android:gravity="center"
        android:text="@string/thong_tin_khac"
        android:textColor="@color/clGroupText"
        android:textSize="14pt"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtThongTinKhac"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:text="Bạn sẽ thực sự cảm thấy hạnh phúc khi bạn nhận ra bạn chẳng có gì đặc biệt!"
        android:textSize="10pt" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/clButton"
        android:text="@string/luu_thong_tin"
        android:textColor="@color/clText"
        android:textSize="10pt"
        android:textStyle="bold" />

</LinearLayout>